fussy-pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  containers:
  - image: new_image
    imagePullPolicy: Never
    name: backend
