fussy-pod-postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: default
  labels:
     app: postgres
spec:
  containers:
  - image: postgress
    imagePullPolicy: Never
    name: postgres
