fussy-default-http-backend.yaml
apiVersion: v1
kind: Service
metadata:
   name: default-http-backend
   namespace: kube-system
   labels:
       my: ownlabel
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
