fussy-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
   labels:
     app: backend
   name: fussy-svc-clusterip-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
      app: backend
