fussy-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   labels:
     app: backend
   name: fussy-svc-nodeport
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
