fussy-svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
   labels:
     app: postgres
   name: fussy-svc-clusterip-postgres
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
      app: postgres
