headless-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: gov-svc-headless
   labels:
     app: backend
spec:
   selector:
     app: backend
   ports:
   - port: 8080
     name: transport
     protocol: TCP
   clusterIP: None
